// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionController changeCardSelection when the control arg equal to false should update the select state of the item 1`] = `
[
  {
    "columns": [],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [],
    "index": 0,
    "isSelected": true,
    "key": 1,
    "values": [],
  },
]
`;

exports[`SelectionController changeCardSelection when the control arg equal to true should update the select state of the item 1`] = `
[
  {
    "columns": [],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [],
    "index": 0,
    "isSelected": false,
    "key": 1,
    "values": [],
  },
]
`;

exports[`SelectionController deselectCards should deselect item 1`] = `
[
  {
    "columns": [],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [],
    "index": 0,
    "isSelected": false,
    "key": 1,
    "values": [],
  },
]
`;

exports[`SelectionController deselectCardsByIndexes should deselect item 1`] = `
[
  {
    "columns": [],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [],
    "index": 0,
    "isSelected": false,
    "key": 1,
    "values": [],
  },
]
`;

exports[`SelectionController selectCards should select item 1`] = `
[
  {
    "columns": [],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [],
    "index": 0,
    "isSelected": true,
    "key": 1,
    "values": [],
  },
]
`;

exports[`SelectionController selectCardsByIndexes should select item 1`] = `
[
  {
    "columns": [],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [],
    "index": 0,
    "isSelected": true,
    "key": 1,
    "values": [],
  },
]
`;
